fix uppy not taking up 100% on mobile

--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -5,7 +5,10 @@ html {
 }
 
 @media (prefers-color-scheme: dark) {
-    body {
+
+    html,
+    body,
+    main {
         background-color: #1e1e1e;
         color: white;
     }
